# SDRPlusPlus

./: .gitignore  CMakeLists.txt  make_macos_bundle.sh  make_windows_package.ps1  readme.md  rx888.img  sdrpp.desktop  sdrpp_module.cmake
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_all.yml
android/app/src/main/: AndroidManifest.xml
core/: CMakeLists.txt
core/backends/: opengl_texture.h
core/backends/android/: backend.cpp
core/backends/glfw/: backend.cpp
core/libcorrect/: CMakeLists.txt
core/libcorrect/src/convolutional/: bit.c
core/src/: backend.h  config.cpp  core.cpp  core.h  decoder_manager.cpp  decoder_manager.h  server.cpp
core/src/dsp/: block.h  processor.h  types.h
core/src/dsp/buffer/: reshaper.h
core/src/dsp/channel/: rx_vfo.h
core/src/dsp/demod/: broadcast_fm.h  sam.h
core/src/dsp/filter/: fir.h  multipath_fir.h
core/src/dsp/multirate/: polyphase_bank.h  rational_resampler.h
core/src/dsp/noise_reduction/: anr.h
core/src/gui/: icons.cpp  icons.h  main_window.cpp  main_window.h  style.cpp
core/src/gui/dialogs/: credits.cpp  dialog_box.h  loading_screen.cpp
core/src/gui/menus/: bandplan.cpp  display.cpp  vfo_color.cpp
core/src/gui/widgets/: bandplan.cpp  bandplan.h  frequency_select.cpp  image.cpp  image.h  line_push_image.cpp  line_push_image.h  snr_meter.cpp  volume_meter.cpp  waterfall.cpp  waterfall.h
core/src/imosm/include/: ImOsmCoords.h  ImOsmITile.h  ImOsmITileLoader.h  ImOsmRichMapPlot.h  ImOsmRichMarkEditorWidget.h  ImOsmRichMarkStorage.h  ImOsmTile.h  ImOsmTileAsync.h  ImOsmTileSourceWidget.h  ImOsmTileTexture.h  latlon.h
core/src/imosm/src/: ImOsmMapPlot.cpp  ImOsmRichDestinationCalcWidget.cpp  ImOsmRichMapPlot.cpp  (+13 more)
core/src/signal_path/: sink.cpp  vfo_manager.cpp
core/src/utils/: flog.cpp  flog.h  freq_formatting.h  hrfreq.cpp  net.cpp
decoder_modules/atv_decoder/src/: main.cpp
decoder_modules/dab_decoder/src/: main.cpp
decoder_modules/falcon9_decoder/src/: main.cpp
decoder_modules/ft8_decoder/: CMakeLists.txt
decoder_modules/ft8_decoder/src/: main.cpp  monitor.c  monitor.h
decoder_modules/kg_sstv_decoder/src/: main.cpp
decoder_modules/m17_decoder/src/: lsf_decode.cpp  main.cpp
decoder_modules/meteor_demodulator/src/: main.cpp
decoder_modules/radio/: CMakeLists.txt
decoder_modules/radio/src/: demod.h  radio_interface.h  radio_module.h  rds.cpp
decoder_modules/radio/src/demodulators/: am.h  cw.h  drm.h  sam.h  wfm.h
decoder_modules/radio/src/drm/: DRMReceiver.cpp  DRMReceiver.h  DRMSignalIO.cpp  DRMSignalIO.h  DataIO.cpp  DataIO.h  DrmTransceiver.h  GlobalDefinitions.h  MSCMultiplexer.cpp  Parameter.cpp  Parameter.h  PlotManager.cpp  ReceptLog.cpp  ReceptLog.h  Scheduler.h  Version.cpp
decoder_modules/radio/src/drm/FAC/: FAC.cpp
decoder_modules/radio/src/drm/MDI/: MDIRSCI.cpp  MDITagItemDecoders.cpp  PacketSourceFile.cpp  RCITagItems.cpp  RSCITagItemDecoders.cpp  RSISubscriber.cpp  TagPacketDecoder.cpp
decoder_modules/radio/src/drm/MLC/: ConvEncoder.cpp  MLC.cpp  ViterbiDecoder.cpp  ViterbiDecoder.h
decoder_modules/radio/src/drm/MSC/: aacsuperframe.cpp  xheaacsuperframe.cpp  xheaacsuperframe.h
decoder_modules/radio/src/drm/SDC/: SDC.h  SDCReceive.cpp
decoder_modules/radio/src/drm/chanest/: ChannelEstimation.cpp
decoder_modules/radio/src/drm/datadecoding/: DABMOT.cpp  DataDecoder.cpp
decoder_modules/radio/src/drm/datadecoding/journaline/: NML.cpp
decoder_modules/radio/src/drm/matlib/: Matlib.h
decoder_modules/radio/src/drm/resample/: AudioResample.cpp
decoder_modules/radio/src/drm/sound/: AudioFileIn.cpp.OFF  sound.h  virtual_sound.h
decoder_modules/radio/src/drm/sourcedecoders/: AudioCodec.cpp  AudioCodec.h  AudioSourceDecoder.cpp  AudioSourceDecoder.h  fdk_aac_codec.cpp  fdk_aac_codec.h  null_codec.cpp  reverb.cpp
decoder_modules/radio/src/drm/util/: FileTyper.cpp  FileTyper.h  Settings.cpp
decoder_modules/ryfi_decoder/src/: main.cpp
decoder_modules/vor_receiver/src/: main.cpp
decoder_modules/weather_sat_decoder/src/: main.cpp
docker_builds/debian_bullseye/: do_build.sh
docker_builds/debian_buster/: do_build.sh
docker_builds/ubuntu_bionic/: do_build.sh
docker_builds/ubuntu_noble/: do_build.sh
misc_modules/demo_module/src/: main.cpp
misc_modules/discord_integration/src/: main.cpp
misc_modules/frequency_manager/src/: main.cpp
misc_modules/iq_exporter/src/: main.cpp
misc_modules/recorder/src/: main.cpp
misc_modules/rigctl_server/src/: main.cpp
misc_modules/scanner/src/: main.cpp
misc_modules/scheduler/src/: main.cpp
root/res/bandplans/: australia.json  austria.json  belgium.json  brazil.json  canada.json  china.json  france.json  general.json  germany-mobile-lte-bands.json  germany-mobile-networks.json  germany.json  ireland.json  italy.json  netherlands.json  qo-100.json  republic-of-korea.json  russia.json  slovakia.json  turkey.json  united-kingdom.json  usa.json
rx888_source/: CMakeLists.txt
rx888_source/src/: main.cpp
sink_modules/android_audio_sink/src/: main.cpp
sink_modules/audio_sink/src/: main.cpp
sink_modules/network_sink/src/: main.cpp
sink_modules/new_portaudio_sink/src/: main.cpp
sink_modules/portaudio_sink/src/: main.cpp
source_modules/audio_source/src/: main.cpp
source_modules/file_source/src/: aureader.cpp  aureader.h  main.cpp  reader.h  wavreader.h
source_modules/network_source/src/: main.cpp
source_modules/sddc_source/: CMakeLists.txt
source_modules/sddc_source/src/: fft_rx_vfo.h  kaiser.h  main.cpp
source_modules/sdrpp_server_source/src/: main.cpp  sdrpp_server_client.cpp
source_modules/soapy_source/src/: main.cpp
source_modules/spyserver_source/src/: main.cpp  spyserver_client.cpp
source_modules/web888_source/: CMakeLists.txt
source_modules/web888_source/src/: kiwisdr.h  main.cpp  websock.h
src/: main_window.cpp  main_window.h
src/dsp/: filter.h  math.h  source.h
src/io/: rx888.h  soapy.h
src/io/CyAPI/: openFX3.cpp
tests/: CMakeLists.txt  CppUnitTestFramework.hpp  reshaper_test.cpp  unittests.cpp
win32/: resources.rc
(+7 files in other folders)
